move all the examples into examples, update the README.md