@@ -1,8 +1,9 @@
 # loom-fiber
-Virtual thread examples using the OpenJDK project Loom prototype
+This repository contains both my experimentation of the OpenJDK project Loom prototype
+and a presentation and examples showing how to use it.
 
-This repository contains my experimentation of the loom API.
-If you are looking for some examples you can take a look to the folder [example](src/main/java/fr/umlv/loom/example).
+There is a [presentation of the loom project](loom%20is%20looming.pdf)
+wiht the [examples](src/main/java/fr/umlv/loom/example).
 
 ## How to build
 
@@ -13,6 +14,16 @@ set the environment variable JAVA_HOME to point to that JDK and then use Maven.
   export JAVA_HOME=/path/to/jdk
   mvn package
 ```
+
+## How to run the examples
+
+On top of each example, there is the command line to run it.
+- Loom is a preview version so `--enable-preview` is required,
+- For `ScopeLocal` and `StructuredTaskScope`, these are not yet part of the official API
+  and are declared in module/package `jdk.incubator.concurrent`so this module
+  has to be added to the command line with `--add-modules jdk.incubator.concurrent`,
+- If you want to play with the internals, the class `Continuation` is hidden thus
+  `--add-exports java.base/jdk.internal.vm=ALL-UNNAMED` should be added to the command line.
 
 ## Loom actor framework
 
